# disney_mm

./: .gitignore  disney_mm.service  setup.cfg
disney_mm/: bot.py  main.py  settings.py
disney_mm/configs/: example_disney_mm.ini
