[metadata]
name = disney_mm
version = 1.0
description = Mattermost Bot to assist with disney world
author = Adam Dyess
author_email = addyess@gmail.com
url = https://github.com/addyess/disney_mm

[options]
packages = disney_mm
install_requires =
      mmpy_bot
      humanize

[options.extras_require]
testing =
      black
      pyflakes

[options.package_data]
disney_mm =
      configs/*

[options.entry_points]
console_scripts =
      disney_mm = disney_mm.main:main